# aswf-pixi

./: .gitignore  AGENTS.md  README.md  pixi.toml
.github/workflows/: build-packages.yml  check-upstream-releases.yml  merge-upstream-release-pr.yml  promote-upstream-releases.yml
flip-evaluator/1.7/: pixi.toml  recipe.yaml
goldeneye/0.1.0/: allow-python-3.10.patch  pixi.toml  python-3.10-tomli.patch  recipe.yaml
goldeneye/0.2.0/: allow-python-3.10.patch  pixi.toml  python-3.10-tomli.patch  recipe.yaml
goldeneye/0.3.0/: allow-python-3.10.patch  pixi.toml  recipe.yaml
goldeneye/0.4.0/: allow-python-3.10.patch  pixi.toml  python-3.10-tomli.patch  recipe.yaml
goldeneye/0.5.0/: allow-python-3.10.patch  pixi.toml  recipe.yaml
imath/3.2.2/: pixi.toml  recipe.yaml
imath/3.2.2/tests/: CMakeLists.txt  imath_consumer.cpp
libuhdr/1.4.0/: add-cstdint.patch  pixi.toml  pkg-config-shared-cflags.patch  recipe.yaml
libuhdr/1.4.0/tests/: CMakeLists.txt  libuhdr_consumer.cpp
materialx/1.39.4/: pixi.toml  recipe.yaml  variants.yaml
materialx/1.39.4/cmake/: remove-unused-x11-dependency.cmake  write-optional-targets.cmake
materialx/1.39.4/tests/: CMakeLists.txt  materialx_consumer.cpp  materialx_render_consumer.cpp  materialx_render_osl_consumer.cpp
materialx/1.39.5/: pixi.toml  recipe.yaml
materialx/1.39.5/cmake/: install-render-slang.cmake  remove-unused-x11-dependency.cmake  write-optional-targets.cmake
materialx/1.39.5/patches/: fix-render-slang-gcc15.patch
materialx/1.39.5/tests/: CMakeLists.txt  check-no-x11-dependency.cmake  materialx_consumer.cpp  materialx_render_msl_consumer.mm  materialx_render_osl_consumer.cpp  materialx_render_slang_consumer.cpp
mdl-sdk/2026.0.0/: pixi.toml  recipe.yaml  variants.yaml
mdl-sdk/2026.0.0/cmake/python-bindings/: CMakeLists.txt
mdl-sdk/2026.0.0/tests/: CMakeLists.txt  check_plugins.py  check_python.py  check_tools.py  mdl_sdk_consumer.cpp
mitsuba/3.8.0/: pixi.toml  recipe.yaml
mitsuba/3.8.0/tests/: check_python.py  check_tools.py
opencolorio/2.5.1/: pixi.toml  recipe.yaml
opencolorio/2.5.1/tests/: opencolorio_consumer.cpp
opencolorio/2.5.2/: pixi.toml  recipe.yaml
opencolorio/2.5.2/tests/: CMakeLists.txt  check_tools.py  opencolorio_consumer.cpp
openexr/3.4.12/: pixi.toml  recipe.yaml
openexr/3.4.12/cmake/: install-openexr-core-metadata.cmake
openexr/3.4.12/tests/: CMakeLists.txt
openexr/3.4.13/: pixi.toml  recipe.yaml
openexr/3.4.13/tests/: CMakeLists.txt  openexr_core_consumer.c  openexr_cpp_consumer.cpp
openimageio/2.5.19.1/: pixi.toml  recipe.yaml
openimageio/3.0.19.1/: pixi.toml  recipe.yaml
openimageio/3.0.19.1/tests/: CMakeLists.txt  check_core_roundtrip.py  check_formats.py
openimageio/3.0.20.0/: pixi.toml  recipe.yaml
openimageio/3.1.14.0/: pixi.toml  recipe.yaml
openimageio/3.1.14.0/tests/: CMakeLists.txt  check_formats.py  openimageio_consumer.cpp
openimageio/3.1.14.1/: pixi.toml  recipe.yaml
openimageio/3.1.15.0/: pixi.toml  recipe.yaml
openqmc/0.7.1/: fix-project-version.patch  fix-windows-shared-table-exports.patch  pixi.toml  recipe.yaml
openqmc/0.7.1/tests/: CMakeLists.txt  openqmc_consumer.cpp
openrv/3.2.0/: pixi.toml  recipe.yaml
openshadinglanguage/1.15.5.0/: fix-llvm-22-clang-components.patch  pixi.toml  recipe.yaml  variants.yaml
openshadinglanguage/1.15.5.0/tests/: CMakeLists.txt  openshadinglanguage_consumer.cpp  query_shader.py
opensubdiv/3.7.0/: pixi.toml  recipe.yaml
opensubdiv/3.7.0/tests/: CMakeLists.txt  opensubdiv_consumer.cpp  opensubdiv_metal_consumer.mm
openusd-typhoon/26.05.0beaac8/: pixi.toml  recipe.yaml
openusd-typhoon/26.05.0beaac8/tests/: CMakeLists.txt
openusd-typhoon/26.05.1.a99d9b6/: pixi.toml  recipe.yaml
openusd-typhoon/26.05.2.05126acbb/: pixi.toml  recipe.yaml
openusd-typhoon/26.05.3.2aa94b0ab/: pixi.toml  recipe.yaml
openusd-typhoon/26.05.3be04db/: pixi.toml  recipe.yaml
openusd-typhoon/26.05.4.6d9726091/: pixi.toml  recipe.yaml
openusd-typhoon/26.05.5.6be07687d/: link-python-to-executables.patch  pixi.toml  recipe.yaml
openusd-typhoon/26.05.6.72fa115c7/: pixi.toml  recipe.yaml
openusd-typhoon/26.05.7.ebc59aadd/: pixi.toml  recipe.yaml
openusd-typhoon/26.05.8.4bdd4b656/: pixi.toml  recipe.yaml
openusd-typhoon/26.05.9.ea5b6f695/: pixi.toml  recipe.yaml
openusd-typhoon/26.05.900b8ec/: pixi.toml  recipe.yaml
openusd-typhoon/26.05.a99d9b6/: pixi.toml  recipe.yaml
openusd/26.05/: find-prefix-python-in-config.patch  pixi.toml  recipe.yaml
openusd/26.08/: find-prefix-python-in-config.patch  link-python-to-executables.patch  pixi.toml  recipe.yaml  variants.yaml
openvdb/13.0.0/: pixi.toml  recipe.yaml  variants.yaml
openvdb/13.0.0/tests/: CMakeLists.txt  nanovdb_consumer.cpp  openvdb_consumer.cpp
optix-dev/9.1.0/: recipe.yaml
partio/1.20.0/: pixi.toml  recipe.yaml
partio/1.20.0/cmake/headless-tools/: CMakeLists.txt
partio/1.20.0/tests/: CMakeLists.txt  check_python.py  check_tools.py  partio_consumer.cpp
pbrt/4.0.0/: fix-nvcc-rgb-to-spectrum-table-resolution.patch  pixi.toml  recipe.yaml  variants.yaml
ptex/2.5.1/: pixi.toml  recipe.yaml
ptex/2.5.1/tests/: CMakeLists.txt
ptex/2.5.2/: pixi.toml  recipe.yaml
scripts/: changed_recipes.py  check_upstream_releases.py  ci_matrix.py  collect_artifacts.py  create_upstream_release_prs.sh  merge_upstream_release_pr.sh  open_upstream_release_pr.sh  publish_packages.py  resolve_build_numbers.py  smoke_consumers.py
seexpr/3.0.1/: fix-msvc-log2.patch  pixi.toml  recipe.yaml
seexpr/3.0.1/tests/: CMakeLists.txt  check_tools.py  seexpr_consumer.cpp
shader-slang/2026.11/: pixi.toml  recipe.yaml
shader-slang/2026.11/tests/: CMakeLists.txt  check_tools.py
shader-slang/2026.12/: pixi.toml  recipe.yaml
shader-slang/2026.12.1/: pixi.toml  recipe.yaml
shader-slang/2026.12.2/: pixi.toml  recipe.yaml
shader-slang/2026.13/: pixi.toml  recipe.yaml
shader-slang/2026.13.1/: pixi.toml  recipe.yaml
shader-slang/2026.14/: pixi.toml  recipe.yaml
tests/: test_ci_scripts.py  test_release_promotion.py  test_upstream_release_checker.py
(+94 files in other folders)
