cmake_minimum_required(VERSION 3.20)
project(openvdb_consumers LANGUAGES CXX)

option(BUILD_OPENVDB_CONSUMER "Build the OpenVDB CMake consumer test" ON)
option(BUILD_NANOVDB_CONSUMER "Build the NanoVDB header consumer test" ON)

if(DEFINED ENV{LIBRARY_PREFIX})
  set(PACKAGE_PREFIX "$ENV{LIBRARY_PREFIX}")
elseif(DEFINED ENV{PREFIX})
  set(PACKAGE_PREFIX "$ENV{PREFIX}")
elseif(WIN32 AND DEFINED ENV{CONDA_PREFIX})
  set(PACKAGE_PREFIX "$ENV{CONDA_PREFIX}/Library")
elseif(DEFINED ENV{CONDA_PREFIX})
  set(PACKAGE_PREFIX "$ENV{CONDA_PREFIX}")
else()
  message(FATAL_ERROR "Could not determine package prefix from LIBRARY_PREFIX, PREFIX, or CONDA_PREFIX")
endif()

if(BUILD_OPENVDB_CONSUMER)
  add_executable(openvdb_consumer openvdb_consumer.cpp)
  find_package(OpenVDB 13.0.0 REQUIRED CONFIG)
  target_link_libraries(openvdb_consumer PRIVATE OpenVDB::openvdb)
  target_compile_features(openvdb_consumer PRIVATE cxx_std_17)
endif()

if(BUILD_NANOVDB_CONSUMER)
  add_executable(nanovdb_consumer nanovdb_consumer.cpp)
  target_include_directories(nanovdb_consumer PRIVATE "${PACKAGE_PREFIX}/include")
  find_package(Threads REQUIRED)
  find_package(TBB REQUIRED COMPONENTS tbb)
  target_link_libraries(nanovdb_consumer PRIVATE TBB::tbb Threads::Threads)
  target_compile_features(nanovdb_consumer PRIVATE cxx_std_17)
endif()
